traces/bug_245.txt
examples++-load/iohdf5.cpp:280: error: DEAD_STORE
  The value written to &trans (type int) is never used.
Showing all 1 steps of the trace


examples++-load/iohdf5.cpp:280:4: Write of unused value
278.   
279.   	  //Hyp A
280.   	  int trans=-1;
          ^
281.   	  if(l[ii].nbfloat==2)
282.   	    {
